# OG-JPN

./: CHANGELOG.md  LICENSE  LICENSE.md  Makefile  README.md  codecov.yml  environment.yml  pyproject.toml  pytest.ini  setup.js  setup.py
.github/: has-functional-changes.sh
.github/workflows/: .pypirc  apisec-scan.yml  build_and_test.yml  check_black.yml  checkmarx.yml  codacy.yml  codeql.yml  codescan.yml  contrast-scan.yml  defender-for-devops.yml  deno.yml  dependency-review.yml  deploy_docs.yml  devskim.yml  docs_check.yml  ethicalcheck.yml  fortify.yml  jekyll-gh-pages.yml  label.yml  mdbook.yml  nextjs.yml  node.js.yml  publish-to-test-pypi.yml  publish.yml  pylint.yml  python-package-conda.yml  python-package.yml  python-publish.yml  release.yml  static.yml
.github/workflows/scripts/: release.py
docs/: README.md
docs/book/: _config.yml  _toc.yml  citations.md
docs/book/_build/html/: fiscal.html  genindex.html  objects.inv  output_plots.html  parameter_plots.html  public_api.html  py-modindex.html  search.html  searchindex.js  utils.html
examples/: run_og_jpn.py
ogjpn/: __init__.py  _version.py  bequest_transmission.py  calibrate.py  constants.py  demographics.py  deterministic_profiles.py  estimate_beta_j.py  income.py  macro_params.py  ogjpn_default_parameters.json  transfer_distribution.py
ogjpn/data/macro/: wb_gov_cons.csv
run_examples/: ogjpn_example_output.csv  run_ogjpn_example.py
run_examples/OUTPUT_BASELINE/SS/: SS_vars.pkl
run_examples/OUTPUT_REFORM/SS/: SS_vars.pkl
tests/test_io_data/: create_params_inputs.pkl
(+72 files in other folders)
