[project]
name = "ogjpn"
version = "1.0.2"
authors = [
  { name="Tatsuru Kikuchi", email="tatsuru.kikuchi@e.u-tokyo.ac.jp" },
]
description = "Overlapping-generations macroeconomic model for evaluating fiscal policy in Japan"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Tatsuru-Kikuchi/OG-JPN"
"Bug Tracker" = "https://github.com/Tatsuru-Kikuchi/OG-JPN/issues"
